# Advent-of-Code

./: .gitignore  EGGS.md  Pipfile  README.md  pyproject.toml  result1.txt  test
2015/Day 01/: not_quite_lisp.py
2015/Day 02/: i_was_told_there_would_be_no_math.py
2015/Day 03/: perfectly_spherical_houses_in_a_vacuum.py
2015/Day 04/: the_ideal_stocking_stuffer.py
2015/Day 05/: doesn_t_he_have_intern_elves_for_this.py
2015/Day 06/: probably_a_fire_hazard.py
2015/Day 07/: some_assembly_required.py
2015/Day 08/: matchsticks.py
2015/Day 09/: all_in_a_single_night.py
2015/Day 10/: elves_look_elves_say.py
2015/Day 11/: corporate_policy.py
2015/Day 12/: jsabacusframework_io.py
2015/Day 13/: knights_of_the_dinner_table.py
2015/Day 14/: reindeer_olympics.py
2015/Day 15/: science_for_hungry_people.py
2015/Day 16/: aunt_sue.py
2015/Day 17/: no_such_thing_as_too_much.py
2015/Day 18/: like_a_gif_for_your_yard.py
2015/Day 19/: medicine_for_rudolph.py  medicine_for_rudolph_test.py
2015/Day 20/: infinite_elves_and_infinite_houses.py
2015/Day 21/: rpg_simulator_20xx.py
2015/Day 22/: wizard_simulator_20xx.py  wizard_simulator_20xx_test.py
2015/Day 23/: opening_the_turing_lock.py
2015/Day 24/: it_hangs_in_the_balance.py
2015/Day 25/: let_it_snow.py
2016/Day 01/: no_time_for_a_taxicab.py
2016/Day 02/: bathroom_security.py
2017/Day 18/: duet.py  (+1 more)
2024/: Cargo.toml
2025/: Cargo.toml
Day 01/: Part 1.py  Part 2.py
Day 02/: Part 1.py  Part 2.py
Day 03/: Part 1.py  Part 2.py
Day 04/: Part 1.py  Part 2.py
Day 05/: Part 1.py  Part 2.py
Day 06/: Part 1.py  Part 2.py
Day 07/: Part 1.py  Part 2.py
Day 08/: Part 1.py  Part 2.py
Day 09/: Part 1.py  Part 2.py
Day 1/: Part 1.py  Part 2.py
Day 10/: Part 1.py  Part 2.py
Day 11/: Part 1.py  Part 2.py
Day 12/: Part 1.py  Part 2.py
Day 13/: Part 1.py  Part 2.py
Day 14/: Part 1.py  Part 2.py
Day 15/: Part 1.py  Part 2.py  example.0.txt  test2.py
Day 16/: Part 1.py  Part 2.py
Day 17/: Part 1.py  Part 2.py  txt2img.py
Day 18/: Part 1.py  Part 2.py
Day 19/: Part 1.py  disass.py
Day 20/: Part 1.py
Day 21/: Part 1.py  Part 2.py  dis.py
Day 22/: Part 1.py  Part 2.py
Day 23/: Part 1.py  Part 2.py
Day 24/: Part 1.py  Part 2.py
Day 25/: Part 1.py
Day 3/: Part 2.py
Day 5/: Part 1.py
Day 6/: Part 1.py  Part 2.py
Day 8/: Part 1.py
Day 9/: Part 2.py  example.6.txt
libadvent/: download.py  easter_egg_extractor.py  update_stats.py
(+404 files in other folders)
