[tool.poetry]
name = "Advent of Code"
version = "2021"
description = "Solved puzzles from Advent of Code and tools for interacting with the site"
license = "MIT"
authors = ["Alexey Dubrov <vhsw@ya.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
networkx = "^2.6.3"
matplotlib = "^3.5.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
hypothesis = "^6.29.0"
mypy = "^0.910"
pylint = "^2.12.1"
pytest = "^6.1.5"
libadvent = {git = "git@github.com:vhsw/libadvent.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint]
[tool.pylint.basic]
good-names = ["df", "fp", "ex", "ip", "x", "y", "dx", "dy", "dz", "dw"]
