[tool.poetry]
name = "Advent of Code"
version = "2022"
description = "Solved puzzles from Advent of Code and tools for interacting with the site"
license = "MIT"
authors = ["Alexey Dubrov <vhsw@ya.ru>"]

[tool.poetry.dependencies]
python = ">=3.11,<4"
numpy = "^1.23.5"
networkx = "^2.8.8"

[tool.poetry.group.dev.dependencies]
libadvent = { git = "git@github.com:vhsw/libadvent.git", tag = "v2022.11.26" }
pylint = "^2.15.6"
mypy = "^0.991"
black = "^22.10.0"
pytest = "^7.2.0"
ipykernel = "^6.17.1"
matplotlib = "^3.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint]
[tool.pylint.basic]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
    "invalid-name",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = true
