[tool.poetry]
name = "Advent of Code"
version = "2022"
description = "Solved puzzles from Advent of Code and tools for interacting with the site"
license = "MIT"
authors = ["Alexey Dubrov <vhsw@ya.ru>"]

[tool.poetry.dependencies]
python = ">=3.13,<4"
numpy = "^2.2.3"
networkx = "^3.4.2"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
libadvent = { git = "git@github.com:vhsw/libadvent.git", tag = "v2022.11.26" }
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint]
[tool.pylint.basic]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
    "invalid-name",
]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = true
